# geogif

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
geogif/: __init__.py  gif.py
tests/: strategies.py  test_geogif.py  test_gif.py  util.py
