[tool.poetry]
name = "geogif"
version = "0.1.0"
description = "Render xarray timestacks into GIFs"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dask = {extras = ["delayed"], version = "^2021.4.1"}
numpy = "^1.20.2"
Pillow = "^8.2.0"
matplotlib = "^3.4.1"
xarray = "^0.17.0"
pytest = {version = "^6.2.3", optional = true}
hypothesis = {version = "^6.10.1", optional = true}
ipython = {version = "^7.23.0", optional = true}
Sphinx = {version = "^3.5.4", optional = true}
numpydoc = {version = "^1.1.0", optional = true}
pandoc = {version = "^1.0.2", optional = true}
nbsphinx = {version = "^0.8.4", optional = true}
sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
coiled = {version = "^0.0.38", optional = true}
distributed = {version = "^2021.4.1", optional = true}
pystac-client = {version = "^0.1.1", optional = true}
furo = {version = "^2021.4.11-beta.34", optional = true}
stackstac = {version = "^0.1.1", optional = true}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.14"
ipython = "^7.23.0"
black = "^21.4b2"
flake8 = "^3.9.1"
shed = "^0.3.4"
sphinx-autobuild = "^2021.3.14"
Bottleneck = "^1.3.2"

[tool.poetry.extras]
test = [
  "pytest",
  "hypothesis",
  "ipython",
]
docs = [
  "Sphinx",
  "numpydoc",
  "sphinx-autodoc-typehints",
  "pandoc",
  "nbsphinx",
  "furo",
  "ipython",
  "jupyter-sphinx",
  "distributed",
  "coiled",
  "pystac-client",
  "stackstac",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
