[tool.poetry]
name = "geogif"
version = "0.1.5"
description = "Render xarray timestacks into GIFs"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gjoseph92/geogif"
homepage = "https://geogif.readthedocs.io/en/latest/index.html"

[tool.poetry.dependencies]
python = "^3.8"
dask = {extras = ["delayed"], version = ">= 2021.4.1"}
numpy = "^1.20.2"
Pillow = "^10"
matplotlib = "^3.4.1"
xarray = ">=0.18"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.0.14"
ipython = "^7.23.0"
black = "^21.4b2"
flake8 = "^3.9.1"
shed = "^0.3.4"
sphinx-autobuild = "^2021.3.14"
Bottleneck = "^1.3.2"
keyring = "^23.0.1"
twine = "^3.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.3"
hypothesis = "^6.10.1"
ipython = "^7.23.0"


[tool.poetry.group.docs.dependencies]
Sphinx = "^3.5.4"
numpydoc = "^1.1.0"
pandoc = "^1.0.2"
nbsphinx = "^0.8.4"
sphinx-autodoc-typehints = "^1.12.0"
coiled = "^0"
distributed = ">= 2021.4.1, < 2023"
pystac-client = "^0"
furo = "^2021.4.11-beta.34"
stackstac = "^0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
